[gd_scene load_steps=3 format=3 uid="uid://cfnkvejtwhoc8"]

[ext_resource type="StyleBox" uid="uid://lmr5r37gvuml" path="res://src/game_scene/cabinet_style.tres" id="1_nfwr5"]
[ext_resource type="Script" path="res://src/game_scene/cab_btn.gd" id="2_ocdyk"]

[node name="BG" type="PanelContainer"]
custom_minimum_size = Vector2(100, 100)
mouse_default_cursor_shape = 2
theme_override_styles/panel = ExtResource("1_nfwr5")
script = ExtResource("2_ocdyk")

[node name="Ing" type="TextureButton" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
ignore_texture_size = true
stretch_mode = 4

[connection signal="mouse_entered" from="Ing" to="." method="_on_ing_mouse_entered"]
[connection signal="mouse_exited" from="Ing" to="." method="_on_ing_mouse_exited"]
[connection signal="pressed" from="Ing" to="." method="_on_ing_pressed"]
